<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.huzzler.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        
        <action
            android:id="@+id/action_dashboard_to_all_assignments"
            app:destination="@id/navigation_all_assignments"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_all_assignments"
        android:name="com.example.huzzler.ui.dashboard.AllAssignmentsFragment"
        android:label="All Assignments"
        tools:layout="@layout/fragment_all_assignments" />
    
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.huzzler.ui.dashboard.NotificationsFragment"
        android:label="Notifications" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.example.huzzler.ui.rewards.RewardsFragment"
        android:label="@string/title_rewards" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.huzzler.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.huzzler.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
